<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toBottomOf="parent"
    app:layout_constraintVertical_bias="0.5">

    <GridLayout
        android:layout_width="441dp"
        android:layout_height="1010dp"
        android:columnCount="3"
        android:padding="16dp"
        android:rowCount="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <!-- Your buttons here with layout_columnWeight="1" -->
        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="390dp"
            android:layout_height="941dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp">

            <TableRow android:layout_height="wrap_content">

                <Button
                    android:id="@+id/backspace"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="280dp"
                    android:layout_marginTop="340dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/circle"
                    android:onClick="backSpaceBTN"
                    android:text="⌫"
                    android:textSize="30sp"
                    app:layout_constraintBottom_toTopOf="@+id/tableLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <Button
                    android:id="@+id/button2"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:backgroundTint="#DD2C00"
                    android:onClick="clearBTN"
                    android:text="@string/clear"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/parenthesis"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"

                    android:onClick="parBTN"
                    android:text="@string/parenthesis"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/exponent"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:onClick="expBTN"
                    android:text="@string/exponent"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/divideBTN"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:onClick="divideBTN"
                    android:text="@string/divide"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/one"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:onClick="oneBTN"
                    android:text="@string/one"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/two"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:onClick="twoBTN"
                    android:text="@string/two"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/three"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:onClick="threeBTN"
                    android:text="@string/three"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/multiplyBTN"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:onClick="multiplyBTN"
                    android:text="@string/multiply"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <Button
                    android:id="@+id/four"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:onClick="fourBTN"
                    android:text="@string/four"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/five"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:onClick="fiveBTN"
                    android:text="@string/five"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/six"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:onClick="sixBTN"
                    android:text="@string/six"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/addBTN"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:onClick="addBTN"
                    android:text="@string/add"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <Button
                    android:id="@+id/seven"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:onClick="sevenBTN"
                    android:text="@string/seven"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/eight"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:onClick="eightBTN"
                    android:text="@string/eight"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/nine"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:onClick="nineBTN"
                    android:text="@string/nine"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/subtractBTN"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:onClick="subtractBTN"
                    android:text="@string/subtract"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <Button
                    android:id="@+id/plusMinusBTN"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:backgroundTint="#DD2C00"
                    android:onClick="plusMinusBTN"
                    android:text="+-"
                    android:textSize="30sp" />
                <Button
                    android:id="@+id/zero"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:onClick="zeroBTN"
                    android:text="@string/zero"
                    android:textSize="20sp" />
                <Button
                    android:id="@+id/point"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:onClick="decimalBTN"
                    android:text="@string/point"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/equalsBTN"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:backgroundTint="#DD2C00"
                    android:onClick="equalsBTN"
                    android:text="@string/equals"
                    android:textSize="30sp" />
            </TableRow>
        </TableLayout>
    </GridLayout>
    <EditText
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:autofillHints="none"
        android:background="@drawable/circle"
        android:clickable="false"
        android:focusable="false"
        android:inputType="none"
        android:text="Enter in a value"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="HardcodedText,LabelFor" />


</androidx.constraintlayout.widget.ConstraintLayout>